# SGS-ZK-gaming

./: AI_AGENT_HANDOFF.md  COMMITMENT_FIX_COMPLETE.md  COMPLETE_NOIR_INTEGRATION.md  Cargo.toml  FINAL_STEPS.sh  FRONTEND_IMPLEMENTATION_SUMMARY.md  GAME_WORKING.md  INTEGRATION_COMPLETE.md  MOCK_PROOFS_REMOVED.md  NOIR_INTEGRATION_GUIDE.md  NOIR_INTEGRATION_STATUS.md  NOIR_PROOFS_ENABLED.md  QUICK_START.sh  README.md  RISC_ZERO_INTEGRATION.md  START_HERE.md  WORKAROUND_VK_EXTRACTION.md  ZK_MEMORY_2X2_UPDATE.md  ZK_MEMORY_BUILD_SUMMARY.md  ZK_MEMORY_COMPLETE.md  ZK_MEMORY_ENCRYPTION_COMPLETE.md  ZK_MEMORY_FIX_SUMMARY.md  ZK_MEMORY_GAME_COMPLETE.md  ZK_MEMORY_IMPLEMENTATION_PLAN.md  ZK_MEMORY_PROGRESS.md  ZK_PROOF_COMPARISON.md  copy-circuit.sh  extract-vk.sh  more_README.md  package.json  zk_memory_game_guide.md
circuits/card_reveal/: Nargo.toml  Prover.toml
circuits/card_reveal/src/: main.nr
circuits/card_reveal_risc/: README.md  TESTING.md  test-integration.sh
circuits/card_reveal_risc/host/: Cargo.toml
circuits/card_reveal_risc/host/src/: main.rs
circuits/card_reveal_risc/methods/guest/: Cargo.toml
circuits/card_reveal_risc/proof-service/: Cargo.toml
circuits/card_reveal_risc/proof-service/src/: main.rs
contracts/zk-memory/: Cargo.toml  README.md
contracts/zk-memory/src/: lib.rs  test.rs
zk-memory-frontend/: index.html  package.json  vite.config.ts
zk-memory-frontend/src/: App.tsx  config.ts
zk-memory-frontend/src/games/zk-memory/: ZkMemoryGame.tsx  bindings.ts  card_reveal.json  deckUtils.ts  (+3 more)
zk-memory-frontend/src/utils/: constants.ts
(+1 files in other folders)
