[package]
name = "proof-service"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^3.0.5" }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
anyhow = "1.0"
hex = "0.4"
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
